# co-cpp19

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CoCpp19Config.cmake.in  LICENSE  Readme.md  azure-pipelines.yml  co-cpp19.qbs
conan/tests/array19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/cocpp19/: CMakeLists.txt  conanfile.txt  conanfile_wrong.txt  main.cpp
conan/tests/coro19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/enum19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/lookup19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/meta19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/optional19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/partial19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/serialize19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/serialzier19/: CMakeLists.txt  conanfile.txt
conan/tests/signal19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/string19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/tuple19/: CMakeLists.txt  conanfile.txt  main.cpp
conan/tests/variant19/: CMakeLists.txt  conanfile.txt  main.cpp
src/: CMakeLists.txt
src/array19.lib/: CMakeLists.txt  array19.lib.qbs  conanfile.py
src/array19.lib/array19/: AllocatedArray.equals.h  AllocatedArray.h  AllocatedArray.ostream.h  AllocatedArrayOf.equals.h  AllocatedArrayOf.h  AllocatedArrayOf.ostream.h  AllocatedArrayOf.test.cpp  AllocatedArrayUtils.h  Array.equals.h  Array.equals.test.cpp  Array.h  Array.ostream.h  Array.slice.h  Array.test.cpp  DynamicArray.equals.h  DynamicArray.h  DynamicArray.ostream.h  DynamicArray.test.cpp  DynamicArrayOf.equals.h  DynamicArrayOf.h  DynamicArrayOf.ostream.h  DynamicArrayOf.test.cpp  DynamicSortedSet.h  MoveSliceOf.h  MoveSliceOf.single.h  SliceOf.array.h  SliceOf.carray.h  SliceOf.equals.h  SliceOf.equals.test.cpp  SliceOf.h  SliceOf.max.h  SliceOf.ostream.h  SliceOf.single.h  SliceOf.store.h  SliceOf.test.cpp  Span.carray.h  Span.equals.h  Span.equals.test.cpp  Span.h  Span.max.h  (+14 more)
src/coro19.lib/: CMakeLists.txt  conanfile.py  coro19.lib.qbs
src/coro19.lib/coro19/: CoEnumerator.h  CoEnumerator.rang.test.cpp  CoEnumerator.range.h  CoEnumerator.test.cpp  coro19.cmake  coro19.qbs  coro19.tests.cmake  coro19.tests.qbs  coroutine.cpp  coroutine.h
src/enum19.lib/: CMakeLists.txt  conanfile.py  enum19.lib.qbs
src/enum19.lib/enum19/: ADL.h  Enum.extras.ostream.h  Enum.fmt.h  Enum.h  Enum.max.h  Enum.max.test.cpp  Enum.names.h  Enum.ostream.h  Enum.ostream.test.cpp  Enum.test.cpp  enum19.cmake  enum19.qbs  enum19.tests.cmake  enum19.tests.qbs  visitEnumMemberNames.h
src/lookup19.lib/: CMakeLists.txt  conanfile.py  lookup19.lib.qbs
src/lookup19.lib/lookup19/: IteratorRange.h  OrderedMapArray.equals.h  OrderedMapArray.h  OrderedMapArray.ostream.h  OrderedMapArray.test.cpp  OrderedMapOf.equals.h  OrderedMapOf.h  OrderedMapOf.ostream.h  OrderedMapOf.test.cpp  OrderedSetOf.h  OrderedSetOf.test.cpp  OrderedSliceOf.h  OrderedSpan.h  SortedArray.h  SortedSlice.h  lookup19.cmake  lookup19.qbs  lookup19.tests.cmake  lookup19.tests.qbs
src/meta19.lib/: CMakeLists.txt  conanfile.py  meta19.lib.qbs
src/meta19.lib/meta19/: Index.h  IndexPack.Join.h  IndexPack.h  IndexPackTemplate.Change.h  IndexPackTemplate.h  RemoveReference.h  Type.Unwrap.h  Type.h  TypeAt.h  TypeAt.test.cpp  TypePack.Front.h  TypePack.contains.h  TypePack.count.h  TypePack.h  TypePack.traits.h  TypePackTemplate.Change.h  TypePackTemplate.Join.h  TypePackTemplate.Join.test.cpp  TypePackTemplate.contains.h  TypePackTemplate.h  Unreachable.h  index_pack.back.h  index_pack.back.test.cpp  index_pack.front.h  index_pack.front.test.cpp  index_pack.h  index_pack.tail.h  index_pack.to_array.h  index_pack.to_array.test.cpp  index_value.h  isSame.h  meta19.cmake  meta19.qbs  meta19.tests.cmake  meta19.tests.qbs  nullptr_to.h  type_pack.h
src/optional19.lib/: CMakeLists.txt  conanfile.py  optional19.lib.qbs
src/optional19.lib/optional19/: NanOptional.h  NanOptional.test.cpp  Optional.equals.h  Optional.h  Optional.ostream.h  Optional.test.cpp  PackedOptional.equals.h  PackedOptional.h  PackedOptional.ostream.h  PackedOptional.test.cpp  PackedOptionalNan.h  PackedOptionalNan.test.cpp  optional19.cmake  optional19.qbs  optional19.tests.cmake  optional19.tests.qbs
src/partial19.lib/: CMakeLists.txt  conanfile.py  partial19.lib.qbs
src/partial19.lib/partial19/: Bitset.equals.h  Bitset.h  Bitset.test.cpp  Partial.equals.h  Partial.h  Partial.ostream.h  Partial.test.cpp  align.h  partial19.cmake  partial19.qbs  partial19.tests.cmake  partial19.tests.qbs
src/serialize19.lib/: CMakeLists.txt  conanfile.py  serialize19.lib.qbs
src/serialize19.lib/serialize19/: Archive.h  ArchiveMode.h  BufferSlice.h  BufferSpan.h  Codec.test.cpp  Endianess.h  Endianness.test.cpp  ReadArchive.h  SizeAppender.h  SizeArchive.h  SliceReader.h  SpanReader.h  UniqueBuffer.h  WriteAppender.h  WriteToArchive.h  dynamicWrite.h  serialize.AllocatedArray.h  serialize.AllocatedArrayOf.h  serialize.Array.h  serialize.BufferSlice.h  serialize.BufferSlice.test.cpp  serialize.BufferSpan.h  serialize.BufferSpan.test.cpp  serialize.DynamicArray.h  serialize.DynamicArray.test.cpp  serialize.DynamicArrayOf.h  serialize.DynamicArrayOf.test.cpp  serialize.None.h  serialize.Optional.h  serialize.Optional.test.cpp  serialize.PackedOptional.h  serialize.PackedOptional.test.cpp  serialize.Partial.h  serialize.Partial.test.cpp  serialize.Strong.h  serialize.Tuple.h  serialize.Tuple.test.cpp  serialize.Variant.h  serialize.Variant.test.cpp  serialize.h  (+17 more)
src/signal19.lib/: CMakeLists.txt  conanfile.py  signal19.lib.qbs
src/signal19.lib/signal19/: SignalWith.h  SignalWith.test.cpp  Subscription.h  Subscriptions.h  (+5 more)
src/string19.lib/: CMakeLists.txt  conanfile.py  string19.lib.qbs
src/strong19.lib/: CMakeLists.txt  conanfile.py  strong19.lib.qbs
src/tuple19.lib/: CMakeLists.txt  conanfile.py  tuple19.lib.qbs
src/variant19.lib/: CMakeLists.txt  conanfile.py  variant19.lib.qbs
(+124 files in other folders)
