add_subdirectory(array19.lib/)
add_subdirectory(coro19.lib/)
add_subdirectory(enum19.lib/)
add_subdirectory(lookup19.lib/)
add_subdirectory(meta19.lib/)
add_subdirectory(optional19.lib/)
add_subdirectory(partial19.lib/)
add_subdirectory(serialize19.lib/)
add_subdirectory(signal19.lib/)
add_subdirectory(string19.lib/)
add_subdirectory(strong19.lib/)
add_subdirectory(tuple19.lib/)
add_subdirectory(variant19.lib/)

